--- a/index.html
+++ b/index.html
@@ -2,39 +2,32 @@
 <html lang="en-US">
 <meta charset="utf-8">
 
-<title>o3 ≈ ozone</title>
+<title>ydy mural dye</title>
 
 <meta name=viewport content="width=device-width">
 <meta name=color-scheme content="dark light">
-<meta name=theme-color content="salmon">
-<meta name=description content="o3 mural of ozone layer uv abc">
+<meta name=theme-color content="coral">
+<meta name=description content="ydy meaning you dye your...">
 
-<link rel="stylesheet" href="violet.css" media=(color)>
-<link rel="stylesheet" href="ultra.css" media="all">
+<link rel="stylesheet" href="yy.css" media=(color)>
+<link rel="stylesheet" href="d.css" media=all>
 <link rel="license" href="UNLICENSE.txt">
-<link rel="icon" href="ooo.svg">
+<link rel="icon" href="reef.svg">
+<link rel="prev" href="/hmusb">
+<link rel="prev" href="/o3">
+<link rel="next" href="/duyu">
+<link rel="next" href="/dfmu">
+<link rel="help" href="/wormhue">
 
-<base href="https://webmural.com">
-
-<link rel="prev" href="/aya">
-<link rel="next" href="/airwaves">
-<link rel="next" href="/octopus">
-<link rel="prev" href="/deev">
-
-<figure aria-label="ozone flow">
-  <ul>
-    <li><a href="/lllllllllll">UV-a</a>
-    <li><a href="/bruv">UV-b</a>
-    <li><a href="/violetttear">UV-c</a>
-  </ul>
-  <a href="/opacity">
-    <abbr title="ozone">O3</abbr>
-  </a>
-  <ul>
-    <li><a href="/supra">UV-a</a>
-    <li><a href="/broove"><small>UV-b</small></a>
-  </ul>
+<figure>
+  <menu>
+    <li><a href="../youch">you</a>
+    <li><a href="../6oo">do</a>
+    <li><a href="../dialon">you</a>
+  </menu>
   <figcaption>
-    All UV-a and some UV-b perme<wbr>ate Ear<wbr>thz oz<wbr>one layer
+    <abbr>ydy</abbr>
+    <a href="../sinset">dye</a>
+    <a href="../rainbov">dub</a>
   </figcaption>
 </figure>
